--- a/Narcolepsy.App/Shared/RequestList.razor
+++ b/Narcolepsy.App/Shared/RequestList.razor
@@ -1,12 +1,12 @@
-﻿@using Narcolepsy.UiKit.Form
-<aside class="request-list">
-    <Button class="add-button" @onclick="OnCreateRequest"><span class="material-symbols-rounded">add</span>&nbsp;<span>Create Request</span></Button>
+﻿<aside class="request-list">
+    <NewRequestButton ClassName="add-button" OnCreate="OnCreateRequest"/>
     @foreach (Request Request in Requests) {
-        <RequestListItem Request="Request" IsActive="Request == ActiveRequest" OnClick="() => ActiveRequestChanged.InvokeAsync(Request)" />
+        <RequestListItem Request="Request" IsActive="Request == ActiveRequest" OnClick="() => ActiveRequestChanged.InvokeAsync(Request)"/>
     }
 </aside>
 
 @code {
+
     [Parameter]
     public List<Request> Requests { get; set; }
 
@@ -18,4 +18,5 @@
 
     [Parameter]
     public EventCallback<Request> ActiveRequestChanged { get; set; }
+
 }
