--- a/Narcolepsy.App/_Imports.razor
+++ b/Narcolepsy.App/_Imports.razor
@@ -8,3 +8,5 @@
 @using Narcolepsy.App.Shared
 @using Narcolepsy.Platform
 @using Narcolepsy.Platform.Requests
+@using Narcolepsy.UiKit.Form
+@using Narcolepsy.UiKit.Layout
