--- a/Narcolepsy.App/Pages/Index.razor
+++ b/Narcolepsy.App/Pages/Index.razor
@@ -2,11 +2,13 @@
 @using Narcolepsy.App.Plugins
 @using Narcolepsy.App.Services
 @using System.Diagnostics
+@using Microsoft.Extensions.Logging
 @using Narcolepsy.Platform.Logging
 @inject PluginManager PluginManager;
 @inject IJSRuntime JsRuntime;
 @inject AssetManager AssetManager;
 @inject IStorage Storage;
+@inject ILogger<Index> MyLogger;
 
 @if (Ready) {
     <RequestView Collection="Collection"/>
