--- a/Narcolepsy.App/Shared/ErrorLogger.razor
+++ b/Narcolepsy.App/Shared/ErrorLogger.razor
@@ -7,7 +7,7 @@
 
     protected override void OnInitialized() {
         base.OnInitialized();
-        Logger.Error(this.Exception, "Unhandled Blazor Exception Occurred");
+        Logger.Error(this.Exception, "Unhandled Exception Occurred");
     }
 
 }
