--- a/Narcolepsy.LogConsole/Pages/Logs.razor
+++ b/Narcolepsy.LogConsole/Pages/Logs.razor
@@ -2,9 +2,10 @@
 @using Narcolepsy.LogConsole.Services
 @using Narcolepsy.LogConsole.Data
 @inject LogService LogService;
+@inject IJSRuntime JsRuntime;
 
-<div class="container">
-    @foreach (LogEntry Entry in Messages) {
+<div class="container" @ref="ContainerRef">
+    @foreach (LogEntry Entry in LogService.LogEntries) {
         @foreach (LogToken Token in Entry.Tokens) {
             <span class="token" style="@Token.Style.GetCssStyle()">@Token.Text</span>
         }
@@ -13,13 +14,17 @@
 </div>
 
 @code {
+    private ElementReference ContainerRef;
     private readonly List<LogEntry> Messages = new();
     protected override Task OnInitializedAsync() {
         this.LogService.LogEntryAvailable += (s, e) => {
-            Messages.Add(e);
             this.InvokeAsync(this.StateHasChanged);
         };
         return base.OnInitializedAsync();
     }
 
+    protected override async Task OnAfterRenderAsync(bool firstRender) {
+        await this.JsRuntime.InvokeVoidAsync("scrollToBottom", this.ContainerRef);
+        await base.OnAfterRenderAsync(firstRender);
+    }
 }
