--- a/Narcolepsy.LogConsole/Pages/Logs.razor.css
+++ b/Narcolepsy.LogConsole/Pages/Logs.razor.css
@@ -1,4 +1,10 @@
 ﻿.container {
 	white-space: pre;
 	font-family: "Cascadia Mono", Courier New, Courier, monospace;
+	height: 100%;
+	overflow: auto;
+	padding: 8px;
+	box-sizing: border-box;
+	width: 100vw;
+	font-size: 14px;
 }
